--- a/dis_sensor_display/app/src/main/AndroidManifest.xml
+++ b/dis_sensor_display/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.pdx.android.ece558finalproject.mingm.distance_sensor">
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.things.permission.MANAGE_INPUT_DRIVERS" />
     <uses-permission android:name="com.google.android.things.permission.USE_PERIPHERAL_IO" />
+
+
+
 
     <application android:label="@string/app_name">
         <uses-library android:name="com.google.android.things" />
